--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "dev:api": "json-server --watch api/db.json --port 4000"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
+    "json-server": "^0.17.0",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
