--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "dev:api": "json-server --watch api/db.json --port 4000"
   },
   "dependencies": {
+    "@emotion/cache": "^11.7.1",
+    "@emotion/react": "^11.7.1",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.6.0",
+    "@fontsource/nunito-sans": "^4.5.2",
+    "@mui/icons-material": "^5.4.1",
+    "@mui/material": "^5.4.1",
     "dotenv": "^16.0.0",
     "json-server": "^0.17.0",
     "next": "12.0.10",
